# k8sowrhskop

./: .env  Dockerfile  docker-compose.yaml
src/: .coveragerc  MANIFEST.in  README.txt  development.ini  faker.sqlite  production.ini  pyproject.toml  pytest.ini  setup.py  start.sh
src/faker/: __init__.py  routes.py  tests.py
src/faker/alembic/: env.py
src/faker/alembic/versions/: 20200309_f5279aebf665.py
src/faker/models/: __init__.py
src/faker/templates/: dbcheck.jinja2  layout.jinja2  mytemplate.jinja2
src/faker/views/: default.py
src/tests/: test_faker.py
